# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.108 2004/11/02 23:23:16 wolf31o2 Exp $

  02 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/pre-kmerge.sh:
  Ssshhh... I've added my super-secret pre-kmerge.sh sed replacement so
  genkernel will only add the 1024x768 version of the gensplash image to the
  bzImage, which added with the livecd-stage2 removal of the unused splash
  images, makes for a significantly smaller (54MB v. 50MB) LiveCD.

  29 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/cdtar/silo-1.2.6-sparc-cdtar.tar.bz2,
  livecd/runscript/sparc64-archscript.sh:
  Updated with silo/mkisofs patch from gustavoz.

  28 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/x86-help.msg:
  Updated x86-help.msg to make it fall more inline with current
  genkernel/livecd-tools options.

  28 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/x86-archscript.sh, livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/pre-kmerge.sh:
  Removing auto-keymap from kmerge.sh and moving it to x86-archscript.sh since
  it is only working properly on amd64 and x86 anyway. Also fixing a typo in
  genkernel's module_load for x86 during pre-kmerge.sh, which should fix USB
  loading.

  22 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf,
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  targets/livecd-stage2/unmerge.sh, targets/netboot/netboot-kernel.sh:
  Changed kernel build caching to use kerncache option, rather than pkgcache
  option. Fixed --postconf and --callback for builds that do not require them.
  Removed delay when removing package sin the system profile. This is now
  catalyst 1.1.0, so enjoy.

  21 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh: