@@ -1,6 +1,12 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.108 2004/11/02 23:23:16 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.109 2004/11/07 13:51:55 wolf31o2 Exp $
+
+  07 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  examples/snapshot_template.spec,
+  livecd/runscript-support/gamecdfs-update.sh,
+  livecd/runscript-support/livecdfs-update.sh:
+  Fixing typo in snapshot_template.spec and closing bug #70321.
 
   02 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/runscript-support/pre-kmerge.sh:
